--- a/index.html
+++ b/index.html
@@ -4,13 +4,44 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Her skal der stå en beskrivelse af websitet, og hvad der tilbydes af indhold...">
+	<meta name="description" content="AYAYAY er en mexicansk restaurant i København. Vi hylder det mexicanske køkken med både traditionelle retter og innovative nyfortolkninger af gamle klasikkere.">
 	<title>Velkommen til AYAYAY - Modern mexican cuisine</title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="ayayay-style.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
 <body>
-	<script src=""></script>
+	<div class="nav-knap">
+		<button class="burger">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+    </button>
+	</div>
+	<nav>
+		<ul>
+			<li>link 1</li>
+			<li>link 2</li>
+			<li>link 3</li>
+			<li>link 3</li>
+		</ul>
+	</nav>
+	<header>
+		<div class="container">
+
+			<div class="logo">
+				<img src="img/template/ayayay-logo.svg" alt="AYAYAY - Modern mexican cuisine"></div>
+		</div>
+	</header>
+	<main>
+		<div class="container"></div>
+	</main>
+	<footer>
+		<div class="container"></div>
+	</footer>
+
+	<!--	js-script link -->
+	<script src="ayayay-script.js"></script>
 </body>
 
 </html>
