--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
         <div class="bar3"></div>
     </button>
 	</div>
-	<nav>
-		<ul>
-			<li>link 1</li>
-			<li>link 2</li>
-			<li>link 3</li>
-			<li>link 3</li>
-		</ul>
-	</nav>
 	<header>
 		<div class="container">
+			<nav>
+				<ul>
+					<li>Home</li>
+					<li>Menu</li>
+					<li>Book Bord</li>
+					<li>Find os</li>
+					<li>kontakt</li>
+				</ul>
+			</nav>
 
 			<div class="logo">
 				<img src="img/template/ayayay-logo.svg" alt="AYAYAY - Modern mexican cuisine"></div>
