Nyopsat top + menu virker i mobile landscape

--- a/test_2 - nyt grid/index.html
+++ b/test_2 - nyt grid/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="AYAYAY er en mexicansk restaurant i København. Vi hylder det mexicanske køkken med både traditionelle retter og innovative nyfortolkninger af gamle klasikkere.">
 	<title>Velkommen til AYAYAY - Modern mexican cuisine</title>
-	<link rel="stylesheet" href="ayayay-style.css">
+	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
@@ -19,7 +19,7 @@
     </button>
 	</div>
 	<header>
-		<div class="container">
+		<div class="darkwrapper">
 			<nav>
 				<ul>
 					<li>Home</li>
@@ -35,14 +35,16 @@
 		</div>
 	</header>
 	<main>
-		<div class="container"></div>
+		<section>main
+			<div class="content"></div>
+		</section>
 	</main>
 	<footer>
-		<div class="container"></div>
+		<div class="content"></div>
 	</footer>
 
 	<!--	js-script link -->
-	<script src="ayayay-script.js"></script>
+	<script src="script.js"></script>
 </body>
 
 </html>
