Footer klar med some-iconer

--- a/test_2 - nyt grid/index.html
+++ b/test_2 - nyt grid/index.html
@@ -31,7 +31,7 @@
 			</nav>
 
 			<div class="logo">
-				<img src="img/template/ayayay-logo.svg" alt="AYAYAY - Modern mexican cuisine"></div>
+				<img src="img/template/ayayay-logo_basic.svg" alt="AYAYAY - Modern mexican cuisine"></div>
 		</div>
 	</header>
 	<main>
@@ -40,7 +40,40 @@
 		</section>
 	</main>
 	<footer>
-		<div class="content"></div>
+		<div class="content">
+			<div>
+				<h3>Restaurant AYAYAY</h3>
+				<p>Adelgade 42</p>
+				<p>1304 København K.</p>
+				<p>kontakt@ayayay.dk</p>
+				<p>22 15 16 17</p>
+			</div>
+			<div>
+				<h3>Åbningstider</h3>
+				<p>Man - lør: 16.00 - 22.00</p>
+				<p>Søn : Lukket</p>
+			</div>
+			<div>
+				<h3>Bordbestilling</h3>
+				<p>22 15 16 17</p>
+				<p>bookbord@ayayay.dk</p>
+				<button>Book bord</button>
+			</div>
+			<div>
+				<h3>Sociale medier</h3>
+				<p>Besøg os på Facebook & Instagram</p>
+				<div class="iconwrapper">
+					<img class="icon" src="img/template/facebook-icon.svg" alt="Se os på facebook">
+					<img class="icon" src="img/template/instagram-icon.svg" alt="Se os på Instagram">
+				</div>
+			</div>
+			<div>
+				<h3>Om</h3>
+				<p>AYAYAY er den første mexicanske restaurant af sin art i Danmark. Vi skaber nye innovative udgaver af klassike retter, og tilfører det mexikanske køkken ny kraft og energi.</p>
+				<p class="copyright">©2018 AYAYAY</p>
+			</div>
+
+		</div>
 	</footer>
 
 	<!--	js-script link -->
