Menu og headerbaggrund opdateret

--- a/test_2 - nyt grid/index.html
+++ b/test_2 - nyt grid/index.html
@@ -70,13 +70,13 @@
 			<div>
 				<h3>Om</h3>
 				<p>AYAYAY er den første mexicanske restaurant af sin art i Danmark. Vi skaber nye innovative udgaver af klassike retter, og tilfører det mexikanske køkken ny kraft og energi.</p>
-				<p class="copyright">©2018 AYAYAY</p>
+				<p class="copyright">AYAYAY 2018</p>
 			</div>
 
 		</div>
 	</footer>
 
-	<!--	js-script link -->
+	<!--	js-script©link -->
 	<script src="script.js"></script>
 </body>
 
