main & om-section

--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
         <div class="bar3"></div>
     </button>
 	</div>
+	<div class="social-icons">
+		<div class="iconwrapper">
+			<img class="icon" src="img/template/facebook-icon.svg" alt="Se os på facebook">
+			<img class="icon" src="img/template/instagram-icon.svg" alt="Se os på Instagram">
+		</div>
+	</div>
 	<header>
 		<div class="darkwrapper">
 			<nav>
 				<ul>
-					<li>Home</li>
+					<li>Forsiden</li>
 					<li>Menu</li>
 					<li>Book Bord</li>
 					<li>Find os</li>
@@ -35,8 +41,58 @@
 		</div>
 	</header>
 	<main>
-		<section>main
-			<div class="content"></div>
+		<section id="om">
+			<div class="content">
+				<div class="om-tekst">
+					<h1 class="velkommen">AY AY AY, caramba!!</h1>
+					<p>Vi hylder det mexicanske køkken med en autentisk og intens smagsoplevelse - dog med et lille tvist. Vores ”fussionskøkken” kombiner traditionelle mexicanske retter og teknikker med nye, innovative trends. </p>
+
+					<p>Dette giver en spændende og anderledes menu, hvor de kendte og elskede klassikere får et friskt pust.</p>
+
+					<p>En helt ny rejse gennem mange af Mexico’s regionale køkkener. </p>
+
+					<p>AYAYAY-restauranterne er familieejet og drives af familien Gonzales. Køkkenet er restaurantens hjerte og sjæl, og vi bruger kun de bedste råvarer i vore retter, som chefkokken personligt godkender hver morgen.</p>
+
+					<p>Vores misson er blive tidens mest nyskabende mexicanske restaurant.</p>
+				</div>
+
+				<div class="om-kontakt">
+					<div>
+						<h3>Restaurant AYAYAY</h3>
+						<p>Adelgade 42</p>
+						<p>1304 København K.</p>
+						<p>kontakt@ayayay.dk</p>
+						<p>22 15 16 17</p>
+					</div>
+					<div>
+						<h3>Åbningstider</h3>
+						<p>Man - lør: 16.00 - 22.00</p>
+						<p>Søn : Lukket</p>
+					</div>
+				</div>
+
+				<img class="om-billede" src="img/template/cheff.png" alt="Emmanuel Gonzales - chefkok, AYAYAY">
+
+				<div class="om-citat">
+					<p>Nyskabende mexicansk mad? Absolut. Vi tager det bedste fra det traditionelle, og giver det et nyt twist!</p>
+					<p class="om-citat-navn">Emmanuel Gonzales - chefkok, AYAYAY</p>
+					<div class="om-citat-cymbol"></div>
+				</div>
+
+				<div class="om-kontakt">
+					<div>
+						<h3>Restaurant AYAYAY</h3>
+						<p>Adelgade 42</p>
+						<p>1304 København K.</p>
+						<p>kontakt@ayayay.dk</p>
+						<p>22 15 16 17</p>
+					</div>
+					<div>
+						<h3>Åbningstider</h3>
+						<p>Man - lør: 16.00 - 22.00</p>
+						<p>Søn : Lukket</p>
+					</div>
+				</div>
 		</section>
 	</main>
 	<footer>
