Feature section + oprydning af css

--- a/index.html
+++ b/index.html
@@ -94,6 +94,28 @@
 					</div>
 				</div>
 		</section>
+		<section id="feature">
+			<div class="content">
+				<div><img src="img/template/feature_menu.jpg" alt="Se vores menu">
+					<div class="linkbox">
+						<h2>Se vores menu</h2>
+						<button>Menu</button>
+					</div>
+				</div>
+				<div><img src="img/template/feature_bookbord.jpg" alt="Book bord">
+					<div class="linkbox">
+						<h2>Book et bord</h2>
+						<button>Book bord</button>
+					</div>
+				</div>
+				<div><img src="img/template/feature_fairtrade.jpg" alt="Vi støtter fairtrade">
+					<div class="linkbox_tekst">
+						<h2>Vi støtter fairtrade!</h2>
+						<p>Læs mere på http://fairtrade-maerket.dk</p>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 	<footer>
 		<div class="content">
