--- a/index.html
+++ b/index.html
@@ -118,22 +118,23 @@
 		</section>
 		<section id="menu">
 			<div class="content">
-				<nav class="filter-menu">
-					<button class="menu-knap" data-kategori="alle">Alle Retter</button>
-					<button class="menu-knap" data-kategori="forretter">Forretter</button>
-					<button class="menu-knap" data-kategori="hovedretter">Hovedretter</button>
-					<button class="menu-knap" data-kategori="desserter">Desserter</button>
-				</nav>
-				<h2></h2>
+				<div class="filter-menu-wrapper">
+					<h2>Menu - <span class="filter-header"></span></h2>
+					<div class="filter-menu">
+						<button class="menu-knap" data-kategori="alle">Alle Retter</button>
+						<button class="menu-knap" data-kategori="forret">Forretter</button>
+						<button class="menu-knap" data-kategori="hovedret">Hovedretter</button>
+						<button class="menu-knap" data-kategori="dessert">Desserter</button>
+					</div>
+				</div>
 				<div class="data-container"></div>
 			</div>
 		</section>
 		<template class="data-template">
 		<article class="menuitem">
 			<img src="" alt="">
-			<h3></h3>
-			<p class="data-id"></p>
 			<p class="data-kategori"></p>
+			<h3></h3>
 			<p class="data-kortbeskrivelse"></p>
 			<p class="data-pris"></p>
 		</article>
