filtermenu 1. del ok

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 						<div><button class="menu-knap" data-kategori="dessert">Desserter</button></div>
 					</div>
 					<div class="filter-menu-mobile">
-						<div><button class="menu-filter-moblie" data-kategori="alle">Filtrér</button></div>
+						<div><button class="filter-knap">Filtrér</button></div>
 					</div>
 				</div>
 				<div class="data-container"></div>
@@ -179,6 +179,15 @@
 
 		</div>
 	</footer>
+
+	<div class="filter-darkwrapper">
+		<ul>
+			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="alle">Alle Retter</a></li>
+			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="forret">Forretter</a></li>
+			<li><a href="javascript:void(0); " lass="menu-knap" data-kategori="hovedret">Hovedretter</a></li>
+			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="dessert">Desserter</a></li>
+		</ul>
+	</div>
 
 	<!-- javascript -->
 	<script src="script.js"></script>
