--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 						<div><button class="menu-knap" data-kategori="dessert">Desserter</button></div>
 					</div>
 					<div class="filter-menu-mobile">
-						<div><button class="filter-knap">Filtrér</button></div>
+						<div><button class="filter-menu-knap">Filtrér</button></div>
 					</div>
 				</div>
 				<div class="data-container"></div>
@@ -184,9 +184,16 @@
 		<ul>
 			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="alle">Alle Retter</a></li>
 			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="forret">Forretter</a></li>
-			<li><a href="javascript:void(0); " lass="menu-knap" data-kategori="hovedret">Hovedretter</a></li>
+			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="hovedret">Hovedretter</a></li>
 			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="dessert">Desserter</a></li>
 		</ul>
+	</div>
+	<div class="filter-knap">
+		<button class="filter-burger">
+        <div class="filter-bar1"></div>
+        <div class="filter-bar2"></div>
+        <div class="filter-bar3"></div>
+    </button>
 	</div>
 
 	<!-- javascript -->
