lukknap filtermenu tilrettet til lukning

--- a/index.html
+++ b/index.html
@@ -181,19 +181,19 @@
 	</footer>
 
 	<div class="filter-darkwrapper">
+		<div class="filter-knap">
+			<button class="burger">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+    </button>
+		</div>
 		<ul>
 			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="alle">Alle Retter</a></li>
 			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="forret">Forretter</a></li>
 			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="hovedret">Hovedretter</a></li>
 			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="dessert">Desserter</a></li>
 		</ul>
-	</div>
-	<div class="filter-knap">
-		<button class="filter-burger">
-        <div class="filter-bar1"></div>
-        <div class="filter-bar2"></div>
-        <div class="filter-bar3"></div>
-    </button>
 	</div>
 
 	<!-- javascript -->
