--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 				<ul>
 					<li><a href="#forsiden">Forsiden</a></li>
 					<li><a href="#menu">Menu</a></li>
-					<li><a href="#">Book Bord</a></li>
-					<li><a href="#">Find os</a></li>
+					<li><a href="#bookbord">Book Bord</a></li>
 					<li><a href="#kontakt">kontakt</a></li>
 				</ul>
 			</nav>
@@ -142,6 +141,11 @@
 			<p class="data-pris"></p>
 		</article>
 		</template>
+		<section id="bookbord">
+			<div class="content">
+				<h2>Her kommer indhold til...</h2>
+			</div>
+		</section>
 	</main>
 	<footer id="kontakt">
 		<div class="content">
