Rettet logo-problem i mobile

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 				<ul>
 					<li><a href="#forsiden">Forsiden</a></li>
 					<li><a href="#menu">Menu</a></li>
-					<li><a href="#bookbord">Book Bord</a></li>
+					<li><a href="#menu">Book Bord</a></li>
 					<li><a href="#kontakt">kontakt</a></li>
 				</ul>
 			</nav>
 
-			<div class="logo">
-				<img src="img/template/ayayay-logo_basic.svg" alt="AYAYAY - Modern mexican cuisine"></div>
+			<div class="logo"><a href="#forsiden">
+				<img src="img/template/ayayay-logo_basic.svg" alt="AYAYAY - Modern mexican cuisine"></a></div>
 		</div>
 	</header>
 	<main>
@@ -98,13 +98,13 @@
 				<div><img src="img/template/feature_menu.jpg" alt="Se vores menu">
 					<div class="linkbox">
 						<h2>Se vores menu</h2>
-						<span><button>Menu</button></span>
+						<span><button onclick="window.location.href = '#menu';">Menu</button></span>
 					</div>
 				</div>
 				<div><img src="img/template/feature_bookbord.jpg" alt="Book bord">
 					<div class="linkbox">
 						<h2>Book et bord</h2>
-						<span><button>Book bord</button></span>
+						<span><button onclick="window.location.href = '#bookbord';">Book bord</button></span>
 					</div>
 				</div>
 				<div><img src="img/template/feature_fairtrade.jpg" alt="Vi støtter fairtrade">
