--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
 			<img class="icon" src="img/template/instagram-icon.svg" alt="Se os på Instagram">
 		</div>
 	</div>
+	<section id="modal">
+		<div id="modal-content">
+			<button>Luk</button>
+			<h2 class="modal-navn"></h2>
+			<img class="fit-image" src="" alt="">
+			<p class="modal-langbeskrivelse"></p>
+			<p class="modal-oprindelsesregion"></p>
+			<p class="modal-pris"></p>
+		</div>
+	</section>
 	<header id="forsiden">
 		<div class="darkwrapper">
 			<nav>
