singlepage og modal med størrelses-script

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 				<div><img src="img/template/feature_fairtrade.jpg" alt="Vi støtter fairtrade">
 					<div class="linkbox_tekst">
 						<h2>Vi støtter fairtrade!</h2>
-						<p>Læs mere på http://fairtrade-maerket.dk</p>
+						<p>Læs mere på: <a href="http://fairtrade-maerket.dk" class="dark">http://fairtrade-maerket.dk</a></p>
 					</div>
 				</div>
 			</div>
@@ -131,9 +131,9 @@
 					<h2>Menu - <span class="filter-header"></span></h2>
 					<div class="filter-menu">
 						<div><button class="menu-knap" data-kategori="alle">Alle Retter</button></div>
-						<div><button class="menu-knap" data-kategori="forret">Forretter</button></div>
-						<div><button class="menu-knap" data-kategori="hovedret">Hovedretter</button></div>
-						<div><button class="menu-knap" data-kategori="dessert">Desserter</button></div>
+						<div><button class="menu-knap" data-kategori="forretter">Forretter</button></div>
+						<div><button class="menu-knap" data-kategori="hovedretter">Hovedretter</button></div>
+						<div><button class="menu-knap" data-kategori="desserter">Desserter</button></div>
 					</div>
 					<div class="filter-menu-mobile">
 						<div><button class="filter-menu-knap">Filtrér</button></div>
@@ -204,9 +204,9 @@
 		</div>
 		<ul>
 			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="alle">Alle Retter</a></li>
-			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="forret">Forretter</a></li>
-			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="hovedret">Hovedretter</a></li>
-			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="dessert">Desserter</a></li>
+			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="forretter">Forretter</a></li>
+			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="hovedretter">Hovedretter</a></li>
+			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="desserter">Desserter</a></li>
 		</ul>
 	</div>
 
