--- a/single.html
+++ b/single.html
@@ -10,7 +10,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
-<body>
+<body class="single-page">
 	<div class="nav-knap">
 		<button class="burger">
         <div class="bar1"></div>
@@ -38,15 +38,15 @@
 		<div class="darkwrapper">
 			<nav>
 				<ul>
-					<li><a href="#forsiden">Forsiden</a></li>
-					<li><a href="#menu">Menu</a></li>
-					<li><a href="#menu">Book Bord</a></li>
-					<li><a href="#kontakt">kontakt</a></li>
+					<li><a href="index.html#forsiden">Forsiden</a></li>
+					<li><a href="index.html#menu">Menu</a></li>
+					<li><a href="index.html#menu">Book Bord</a></li>
+					<li><a href="index.html#kontakt">kontakt</a></li>
 				</ul>
 			</nav>
 
-			<div class="logo"><a href="#forsiden">
-				<img src="img/template/ayayay-logo_basic.svg" alt="AYAYAY - Modern mexican cuisine"></a></div>
+			<div class="logo"><a href="index.html#forsiden">
+				<img src="img/template/ayayay-logo_single-page.svg" alt="AYAYAY - Modern mexican cuisine"></a></div>
 		</div>
 	</header>
 	<main>
@@ -54,9 +54,10 @@
 			<div class="content">
 				<div class="data-container">
 					<article class="menuitem">
-						<button class="tilbage">Tilbage</button>
+						<div class="tilbage-wrapper"><span><button class="tilbage">Tilbage</button></span>
+						</div>
 						<img src="" alt="">
-						<h3></h3>
+						<h3 class="modal-navn"></h3>
 						<img class="fit-image" src="" alt="">
 						<p class="data-langbeskrivelse"></p>
 						<p class="data-oprindelsesregion"></p>
