tilbagefunction til single-view med history.go OK

--- a/index.html
+++ b/index.html
@@ -144,16 +144,19 @@
 		</section>
 		<template class="data-template">
 		<article class="menuitem">
-			<img src="" alt="">
-			<p class="data-kategori"></p>
-			<h3></h3>
-			<p class="data-kortbeskrivelse"></p>
-			<p class="data-pris"></p>
+			<div id="">
+				<img src="" alt="">
+				<p class="data-kategori"></p>
+				<h3></h3>
+				<p class="data-kortbeskrivelse"></p>
+				<p class="data-pris"></p>
+			</div>
 		</article>
 		</template>
 		<section id="bookbord">
 			<div class="content">
-				<h2>Her kommer indhold til...</h2>
+				<h2>Book bord</h2>
+				<p>Bestilling - Er ved at blive kodet... :-)</p>
 			</div>
 		</section>
 	</main>
@@ -175,7 +178,7 @@
 				<h3>Bordbestilling</h3>
 				<p>22 15 16 17</p>
 				<p>bookbord@ayayay.dk</p>
-				<button>Book bord</button>
+				<span><button onclick="window.location.href = '#bookbord';">Book bord</button></span>
 			</div>
 			<div>
 				<h3>Sociale medier</h3>
