ux-knap & logo effekter

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 		<div class="darkwrapper">
 			<nav>
 				<ul>
-					<li><a href="#forsiden">Forsiden</a></li>
-					<li><a href="#menu">Menu</a></li>
-					<li><a href="#menu">Book Bord</a></li>
-					<li><a href="#kontakt">kontakt</a></li>
+					<li><a href="#om" class="scroll" data-speed="1000">Forsiden</a></li>
+					<li><a href="#menu" class="scroll" data-speed="1000">Menu</a></li>
+					<li><a href="#bookbord" class="scroll" data-speed="1000">Book Bord</a></li>
+					<li><a href="#kontakt" class="scroll" data-speed="1000">kontakt</a></li>
 				</ul>
 			</nav>
 
@@ -215,7 +215,7 @@
 
 	<!-- javascript -->
 	<script src="script.js"></script>
-
+	<script src="scoll-to.js"></script>
 </body>
 
 </html>
