farverettelser & book bord igang

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 	</div>
 	<section id="modal">
 		<div id="modal-content">
-			<button>Luk</button>
+			<button class="modal-tilbageknap">Luk</button>
+			<img src="" alt="">
+			<p class="modal-kategori"></p>
 			<h2 class="modal-navn"></h2>
-			<img class="fit-image" src="" alt="">
 			<p class="modal-langbeskrivelse"></p>
 			<p class="modal-oprindelsesregion"></p>
 			<p class="modal-pris"></p>
@@ -38,10 +39,10 @@
 		<div class="darkwrapper">
 			<nav>
 				<ul>
-					<li><a href="#om" class="scroll" data-speed="1000">Forsiden</a></li>
-					<li><a href="#menu" class="scroll" data-speed="1000">Menu</a></li>
-					<li><a href="#bookbord" class="scroll" data-speed="1000">Book Bord</a></li>
-					<li><a href="#kontakt" class="scroll" data-speed="1000">kontakt</a></li>
+					<li><a href="#om" class="scroll" data-speed="500">Forsiden</a></li>
+					<li><a href="#menu" class="scroll" data-speed="500">Menu</a></li>
+					<li><a href="#bookbord" class="scroll" data-speed="500">Book Bord</a></li>
+					<li><a href="#kontakt" class="scroll" data-speed="500">kontakt</a></li>
 				</ul>
 			</nav>
 
