img size in loop ok

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<div><img src="img/template/feature_fairtrade.jpg" alt="Vi støtter fairtrade">
 					<div class="linkbox_tekst">
 						<h2>Vi støtter fairtrade!</h2>
-						<p>Læs mere på: <a href="http://fairtrade-maerket.dk" class="dark">http://fairtrade-maerket.dk</a></p>
+						<p>Læs mere på: <a href="http://fairtrade-maerket.dk" class="dark" target="_blank">http://fairtrade-maerket.dk</a></p>
 					</div>
 				</div>
 			</div>
