--- a/index.html
+++ b/index.html
@@ -106,22 +106,22 @@
 		</section>
 		<section id="feature">
 			<div class="content">
-				<div><img src="img/template/feature_menu.jpg" alt="Se vores menu">
+				<div><img src="img/template/feature_menu_900.jpg" alt="Se vores menu">
 					<div class="linkbox">
 						<h2>Se vores menu</h2>
 						<span><button onclick="window.location.href = '#menu';">Menu</button></span>
 					</div>
 				</div>
-				<div><img src="img/template/feature_bookbord.jpg" alt="Book bord">
+				<div><img src="img/template/feature_bookbord_900.jpg" alt="Book bord">
 					<div class="linkbox">
 						<h2>Book et bord</h2>
 						<span><button onclick="window.location.href = '#bookbord';">Book bord</button></span>
 					</div>
 				</div>
-				<div><img src="img/template/feature_fairtrade.jpg" alt="Vi støtter fairtrade">
+				<div><img src="img/template/feature_fairtrade_900.jpg" alt="Vi støtter fairtrade">
 					<div class="linkbox_tekst">
 						<h2>Vi støtter fairtrade!</h2>
-						<p>Læs mere på: <a href="http://fairtrade-maerket.dk" class="dark" target="_blank">http://fairtrade-maerket.dk</a></p>
+						<p>Læs mere på: <a href="http://fairtrade-maerket.dk" class="dark" target="_blank" rel="noopener">http://fairtrade-maerket.dk</a></p>
 					</div>
 				</div>
 			</div>
