--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
 	</div>
 	<section id="modal">
 		<div id="modal-content">
-			<button class="modal-tilbageknap">Luk</button>
-			<img src="" alt="">
-			<p class="modal-kategori"></p>
+			<button>Luk</button>
 			<h2 class="modal-navn"></h2>
+			<img class="fit-image" src="" alt="">
 			<p class="modal-langbeskrivelse"></p>
 			<p class="modal-oprindelsesregion"></p>
 			<p class="modal-pris"></p>
@@ -106,16 +105,16 @@
 		</section>
 		<section id="feature">
 			<div class="content">
-				<div><img src="img/template/feature_menu_900.jpg" alt="Se vores menu">
+				<div><a href="#menu" class="scroll" data-speed="500"><img src="img/template/feature_menu_900.jpg" alt="Se vores menu"></a>
 					<div class="linkbox">
 						<h2>Se vores menu</h2>
-						<span><button onclick="window.location.href = '#menu';">Menu</button></span>
+						<a href="#menu" class="links scroll" data-speed="500">Menu</a>
 					</div>
 				</div>
-				<div><img src="img/template/feature_bookbord_900.jpg" alt="Book bord">
+				<div><a href="#bookbord" class="scroll" data-speed="500"><img src="img/template/feature_bookbord_900.jpg" alt="Book bord"></a>
 					<div class="linkbox">
 						<h2>Book et bord</h2>
-						<span><button onclick="window.location.href = '#bookbord';">Book bord</button></span>
+						<a href="#bookbord" class="links scroll" data-speed="500">Bookbord</a>
 					</div>
 				</div>
 				<div><img src="img/template/feature_fairtrade_900.jpg" alt="Vi støtter fairtrade">
@@ -145,13 +144,11 @@
 		</section>
 		<template class="data-template">
 		<article class="menuitem">
-			<div id="">
 				<img src="" alt="">
-				<p class="data-kategori"></p>
+				 <p class="data-kategori"></p>
 				<h3></h3>
-				<p class="data-kortbeskrivelse"></p>
+				 <p class="data-kortbeskrivelse"></p>
 				<p class="data-pris"></p>
-			</div>
 		</article>
 		</template>
 		<section id="bookbord">
@@ -207,10 +204,10 @@
     </button>
 		</div>
 		<ul>
-			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="alle">Alle Retter</a></li>
-			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="forretter">Forretter</a></li>
-			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="hovedretter">Hovedretter</a></li>
-			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="desserter">Desserter</a></li>
+			<li><a href="javascript:void(0);" class="menu-knap" data-kategori="alle">Alle Retter</a></li>
+			<li><a href="javascript:void(0);" class="menu-knap" data-kategori="forretter">Forretter</a></li>
+			<li><a href="javascript:void(0);" class="menu-knap" data-kategori="hovedretter">Hovedretter</a></li>
+			<li><a href="javascript:void(0);" class="menu-knap" data-kategori="desserter">Desserter</a></li>
 		</ul>
 	</div>
 
