forenkling af singleview-kode

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 	<section id="modal">
 		<div id="modal-content">
 			<button>Luk</button>
+			<img class="" src="" alt="">
+			<p class="modal-kategori"></p>
 			<h2 class="modal-navn"></h2>
-			<img class="fit-image" src="" alt="">
 			<p class="modal-langbeskrivelse"></p>
 			<p class="modal-oprindelsesregion"></p>
 			<p class="modal-pris"></p>
