--- a/single.html
+++ b/single.html
@@ -24,16 +24,6 @@
 			<img class="icon" src="img/template/instagram-icon.svg" alt="Se os på Instagram">
 		</div>
 	</div>
-	<section id="modal">
-		<div id="modal-content">
-			<button>Luk</button>
-			<h2 class="modal-navn"></h2>
-			<img class="fit-image" src="" alt="">
-			<p class="modal-langbeskrivelse"></p>
-			<p class="modal-oprindelsesregion"></p>
-			<p class="modal-pris"></p>
-		</div>
-	</section>
 	<header id="forsiden">
 		<div class="darkwrapper">
 			<nav>
@@ -57,8 +47,8 @@
 						<div class="tilbage-wrapper"><span><button class="tilbage">Tilbage</button></span>
 						</div>
 						<img src="" alt="">
-						<h3 class="modal-navn"></h3>
-						<img class="fit-image" src="" alt="">
+						<p class="data-kategori"></p>
+						<h3></h3>
 						<p class="data-langbeskrivelse"></p>
 						<p class="data-oprindelsesregion"></p>
 						<p class="data-pris"></p>
