--- a/single.html
+++ b/single.html
@@ -44,7 +44,7 @@
 			<div class="content">
 				<div class="data-container">
 					<article class="menuitem">
-						<div class="tilbage-wrapper"><span><button class="tilbage">Tilbage</button></span>
+						<div class="tilbage-wrapper"><span><button class="tilbage" aria-label="Gå tilbage">Tilbage</button></span>
 						</div>
 						<img src="" alt="">
 						<p class="data-kategori"></p>
@@ -94,24 +94,10 @@
 		</div>
 	</footer>
 
-	<div class="filter-darkwrapper">
-		<div class="filter-knap">
-			<button class="burger">
-        <div class="bar1"></div>
-        <div class="bar2"></div>
-        <div class="bar3"></div>
-    </button>
-		</div>
-		<ul>
-			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="alle">Alle Retter</a></li>
-			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="forret">Forretter</a></li>
-			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="hovedret">Hovedretter</a></li>
-			<li><a href="javascript:void(0); " class="menu-knap" data-kategori="dessert">Desserter</a></li>
-		</ul>
-	</div>
-
-	<!-- javascript -->
+	<!-- javascript til singlepage-->
 	<script src="script-single.js"></script>
+	<!-- scoll-funktion til links på samme side -->
+	<script src="scoll-to.js"></script>
 
 </body>
 
