Book-bord grundopsætning

--- a/index.html
+++ b/index.html
@@ -109,18 +109,28 @@
 				<div><a href="#menu" class="scroll" data-speed="500"><img src="img/template/feature_menu_900.jpg" alt="Se vores menu"></a>
 					<div class="linkbox">
 						<h2>Se vores menu</h2>
+						<div class="billedtekst">
+							<p>Vi arbejde både med nye smagsvarianter og det traditionelle mexicanske køkken. Smag fx vores chimichanga, quesedillas, tacos, enchilladas og fajitas.</p>
+						</div>
 						<a href="#menu" class="links scroll" data-speed="500">Menu</a>
 					</div>
 				</div>
 				<div><a href="#bookbord" class="scroll" data-speed="500"><img src="img/template/feature_bookbord_900.jpg" alt="Book bord"></a>
 					<div class="linkbox">
 						<h2>Book et bord</h2>
+						<div class="billedtekst">
+							<p>Vi har både et hyggeligt bord til 2, og plads til større selskaber. Hvis i bliver mere dne 10 personer, så ring venligt på 22 15 16 17.</p>
+						</div>
 						<a href="#bookbord" class="links scroll" data-speed="500">Bookbord</a>
 					</div>
 				</div>
-				<div><img src="img/template/feature_fairtrade_900.jpg" alt="Vi støtter fairtrade">
+				<div class="fairtrade">
+					<div class="imagecut"><img src="img/template/feature_fairtrade_900.jpg" alt="Vi støtter fairtrade"></div>
 					<div class="linkbox_tekst">
-						<h2>Vi støtter fairtrade!</h2>
+						<h2>vi støtter fairtrade!</h2>
+						<div class="billedtekst">
+							<p>Hos AYAYAY har det stor prioritet at alle råvarer bliver dyrket og transporteret bæredygtigt. Vi benytter kun leverandører, som er del af den internationale mærkningsordning.</p>
+						</div>
 						<p>Læs mere på: <a href="http://fairtrade-maerket.dk" class="dark" target="_blank" rel="noopener">http://fairtrade-maerket.dk</a></p>
 					</div>
 				</div>
@@ -154,8 +164,16 @@
 		</template>
 		<section id="bookbord">
 			<div class="content">
-				<h2>Book bord</h2>
-				<p>Bestilling - Er ved at blive kodet... :-)</p>
+				<div class="brunbund">
+					<h2>Book et bord</h2>
+					<div class="valg">1. Antal personer</div>
+					<div class="valg">2. Vælg dato:</div>
+					<div class="valg">3. Vælg tid:</div>
+					<div class="valg">Book</div>
+					<div class="info">
+						<p>Er i mere end 10 personer? - så kontakt os gerne på <span class="telefon">22 15 16 17</span> eller bookbord@ayayay.dk</p>
+					</div>
+				</div>
 			</div>
 		</section>
 	</main>
