--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 	<title>Velkommen til AYAYAY - Modern mexican cuisine</title>
 	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
+
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
+
+
 </head>
 
 <body>
@@ -85,7 +96,7 @@
 
 				<div class="om-citat">
 					<p>Nyskabende mexicansk mad? Absolut. Vi tager det bedste fra det traditionelle, og giver det et nyt twist!</p>
-					<p class="om-citat-navn">Emmanuel Gonzales - chefkok, AYAYAY</p>
+					<p class="om-citat-navn">Emmanuel Gonzales - Chefkok, AYAYAY</p>
 					<div class="om-citat-cymbol"></div>
 				</div>
 
@@ -131,7 +142,7 @@
 						<div class="billedtekst">
 							<p>Hos AYAYAY har det stor prioritet at alle råvarer bliver dyrket og transporteret bæredygtigt. Vi benytter kun leverandører, som er del af den internationale mærkningsordning.</p>
 						</div>
-						<p>Læs mere på: <a href="http://fairtrade-maerket.dk" class="dark" target="_blank" rel="noopener">http://fairtrade-maerket.dk</a></p>
+						<p>Læs mere på: <a href="http://fairtrade-maerket.dk" class="darklink" target="_blank" rel="noopener">http://fairtrade-maerket.dk</a></p>
 					</div>
 				</div>
 			</div>
@@ -194,7 +205,7 @@
 						</div>
 					</div>
 					<div class="valg_do">
-						<div class="valg_do">Book</div>
+						<div id="valg_book">Book</div>
 					</div>
 					<div class="info">
 						<p>Er i mere end 10 personer? - så kontakt os gerne på <span class="telefon">22 15 16 17</span> eller <a href="mailto:bookbord@ayayay.dk">bookbord@ayayay.dk</a></p>
@@ -221,7 +232,7 @@
 				<h3>Bordbestilling</h3>
 				<p>22 15 16 17</p>
 				<p><a href="mailto:bookbord@ayayay.dk">bookbord@ayayay.dk</a></p>
-				<p><a href="#bookbord" class="links scroll" data-speed="500">Bookbord</a></p>
+				<p><a href="#bookbord" class="links scroll" data-speed="500">Book bord</a></p>
 			</div>
 			<div>
 				<h3>Sociale medier</h3>
