--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="AYAYAY er en mexicansk restaurant i København. Vi hylder det mexicanske køkken med både traditionelle retter og innovative nyfortolkninger af gamle klasikkere.">
 	<title>Velkommen til AYAYAY - Modern mexican cuisine</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -275,9 +275,9 @@
 	</div>
 
 	<!-- javascript -->
-	<script src="script.js"></script>
+	<script src="js/script.js"></script>
 	<!-- scoll-funktion til onepage-links -->
-	<script src="scoll-to.js"></script>
+	<script src="js/scoll-to.js"></script>
 </body>
 
 </html>
